# edgedb-pydantic-codegen

./: LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: calver.yml  ci.yml
edgedb_pydantic_codegen/: __init__.py  __main__.py  generate.py  generator.py  models.py  template.py.jinja  utils.py
gel_pydantic_codegen/: __init__.py  __main__.py  generator.py  models.py
