[project]
name = "edgedb-pydantic-codegen"
version = "2024.10.3"
description = "Alternative Python EdgeDB code generator (Pydantic V2 + asyncio, FastAPI compatible)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<4"
dependencies = [
    # codegen
    "edgedb>=1,<3",
    "jinja2>=3,<4",
    "ruff>=0.1.2,<1",
    # runtime
    "pydantic>=2,<3",
    "orjson>=3,<4",
]

[tool.uv]
dev-dependencies = ["pyright==1.1.384"]

[project.scripts]
edgedb-pydantic-codegen = "edgedb_pydantic_codegen.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.11"
reportDeprecated = true

[tool.ruff.lint]
extend-select = ["I"]
