[project]
name = "edgedb-pydantic-codegen"
dynamic = ["version"]
description = "Alternative Python EdgeDB code generator (Pydantic V2 + asyncio, FastAPI compatible)"
readme = "README.md"
license = "MIT"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.11"
dependencies = [
    # codegen
    "edgedb>=1,<3",
    "jinja2>=3,<4",
    "ruff>=0.1.2,<1",
    # runtime
    "pydantic>=2,<3",
    "orjson>=3,<4",
]

[dependency-groups]
dev = ["pyright==1.1.387"]

[project.scripts]
edgedb-pydantic-codegen = "edgedb_pydantic_codegen.__main__:cli"

[project.urls]
homepage = "https://github.com/Japan7/edgedb-pydantic-codegen"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.11"
reportDeprecated = true

[tool.ruff.lint]
extend-select = ["I"]
