[project]
name = "gel-pydantic-codegen"
dynamic = ["version"]
description = "Alternative Python Gel code generator (Pydantic V2 + asyncio, FastAPI compatible)"
readme = "README.md"
license = "MIT"
authors = [{ name = "NextFire", email = "git@yuru.moe" }]
requires-python = ">=3.11"
dependencies = [
    # codegen
    "gel>=3,<4",
    "jinja2>=3,<4",
    "ruff>=0.1.2,<1",
    # runtime
    "pydantic>=2,<3",
    "orjson>=3,<4",
]

[dependency-groups]
dev = ["pyright==1.1.395"]

[project.scripts]
gel-pydantic-codegen = "gel_pydantic_codegen.__main__:cli"

[project.urls]
homepage = "https://github.com/Japan7/gel-pydantic-codegen"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.pyright]
pythonVersion = "3.11"
reportDeprecated = true

[tool.ruff.lint]
extend-select = ["I"]
